# strategic-tech-newsletter

./: .env.example  .gitignore  CLAUDE.md  README.md  START_HERE.md  pyproject.toml
.claude/: settings.json
content/drafts/: ai-agents-devops.md  ai-agents-devops_factcheck.json  ai-coding-assistants-adoption-outline.md  ai-coding-assistants-adoption.md  ai-coding-assistants-adoption_factcheck.json  eu-ai-regulation-outline.md  eu-ai-regulation.md  eu-ai-regulation_factcheck.json  march-w1-case-story-shopify-copilot.md  march-w1-case-story-shopify-copilot_factcheck.json  march-w1-framework-raft-model.md  march-w1-framework-raft-model_factcheck.json  march-w1-insight-llm-consolidation.md  march-w1-insight-llm-consolidation_factcheck.json  march-w2-case-story-discord-rust.md  march-w2-case-story-discord-rust_factcheck.json  march-w2-framework-platform-engineering.md  march-w2-framework-platform-engineering_factcheck.json  march-w2-insight-cloud-waste.md  march-w2-insight-cloud-waste_factcheck.json  march-w3-case-story-zero-trust-incident.md  march-w3-framework-realtime-data-pipeline.md  (+26 more)
data/: agentic_coding_research_2024-2025.md  expert_database.json  fact_check_library.json  topic_trends.csv
docs/: CLAUDE_AUTOMATION_BLUEPRINT.md  ENHANCED_CONTENT_STRATEGY.md  SETUP_GUIDE.md  WORKFLOWS.md  WORKFLOW_ANALYSIS.md  based on all of the above help me figure out how t.md
research/: xp-practices-ai-assisted-development.md
scripts/: analytics_report.py  fact_check.py  research_sources.py  social_repurpose.py  sponsor_outreach.py  validate_setup.py
tests/: conftest.py
(+114 files in other folders)
